--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ header .logo {
 
 /* --- Header slider --- */
 #header-wrapper.header-slider {
-	background: #444 url(../img/bg/vathsav.jpg) no-repeat center center fixed;
+	background: #444 url(../img/bg/vathsav.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
